Compilador/y.output
Terminals unused in grammar

   TOK_ERROR


Grammar

    0 $accept: programa $end

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones tabla funciones main sentencias TOK_LLAVEDERECHA

    2 declaraciones: declaracion
    3              | declaracion declaraciones

    4 declaracion: clase identificadores TOK_PUNTOYCOMA

    5 clase: clase_escalar
    6      | clase_vector

    7 clase_escalar: tipo

    8 tipo: TOK_INT
    9     | TOK_BOOLEAN

   10 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO TOK_CONSTANTE_ENTERA TOK_CORCHETEDERECHO

   11 identificadores: identificador
   12                | identificador TOK_COMA identificadores

   13 funciones: funcion funciones
   14          | %empty

   15 funcion: fn_declaration sentencias TOK_LLAVEDERECHA

   16 fn_declaration: fn_name TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

   17 fn_name: TOK_FUNCTION tipo TOK_IDENTIFICADOR

   18 parametros_funcion: parametro_funcion resto_parametros_funcion
   19                   | %empty

   20 resto_parametros_funcion: TOK_PUNTOYCOMA parametro_funcion resto_parametros_funcion
   21                         | %empty

   22 parametro_funcion: tipo idpf

   23 idpf: TOK_IDENTIFICADOR

   24 declaraciones_funcion: declaraciones
   25                      | %empty

   26 sentencias: sentencia
   27           | sentencia sentencias

   28 sentencia: sentencia_simple TOK_PUNTOYCOMA
   29          | bloque

   30 sentencia_simple: asignacion
   31                 | lectura
   32                 | escritura
   33                 | retorno_funcion

   34 bloque: condicional
   35       | bucle

   36 asignacion: TOK_IDENTIFICADOR TOK_ASIGNACION exp
   37           | elemento_vector TOK_ASIGNACION exp

   38 elemento_vector: TOK_IDENTIFICADOR TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

   39 condicional: if_exp_sentencias TOK_LLAVEDERECHA
   40            | if_exp_sentencias TOK_LLAVEDERECHA TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

   41 if_exp: TOK_IF TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA

   42 if_exp_sentencias: if_exp sentencias

   43 bucle: while_exp sentencias TOK_LLAVEDERECHA

   44 while: TOK_WHILE TOK_PARENTESISIZQUIERDO

   45 while_exp: while exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA

   46 lectura: TOK_SCANF TOK_IDENTIFICADOR

   47 escritura: TOK_PRINTF exp

   48 retorno_funcion: TOK_RETURN exp

   49 exp: exp TOK_MAS exp
   50    | exp TOK_MENOS exp
   51    | exp TOK_DIVISION exp
   52    | exp TOK_ASTERISCO exp
   53    | TOK_MENOS exp
   54    | exp TOK_AND exp
   55    | exp TOK_OR exp
   56    | TOK_NOT exp
   57    | TOK_IDENTIFICADOR
   58    | constante
   59    | TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO
   60    | TOK_PARENTESISIZQUIERDO comparacion TOK_PARENTESISDERECHO
   61    | elemento_vector
   62    | call_func lista_expresiones TOK_PARENTESISDERECHO

   63 call_func: TOK_IDENTIFICADOR TOK_PARENTESISIZQUIERDO

   64 lista_expresiones: expf resto_lista_expresiones
   65                  | %empty

   66 resto_lista_expresiones: TOK_COMA expf resto_lista_expresiones
   67                        | %empty

   68 expf: exp

   69 comparacion: exp TOK_IGUAL exp
   70            | exp TOK_DISTINTO exp
   71            | exp TOK_MENORIGUAL exp
   72            | exp TOK_MAYORIGUAL exp
   73            | exp TOK_MENOR exp
   74            | exp TOK_MAYOR exp

   75 constante: constante_logica
   76          | constante_entera

   77 constante_logica: TOK_TRUE
   78                 | TOK_FALSE

   79 constante_entera: TOK_CONSTANTE_ENTERA

   80 identificador: TOK_IDENTIFICADOR

   81 tabla: %empty

   82 main: %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
TOK_MAIN (258) 1
TOK_INT (259) 8
TOK_BOOLEAN (260) 9
TOK_ARRAY (261) 10
TOK_FUNCTION (262) 17
TOK_IF (263) 41
TOK_ELSE (264) 40
TOK_WHILE (265) 44
TOK_SCANF (266) 46
TOK_PRINTF (267) 47
TOK_RETURN (268) 48
TOK_PUNTOYCOMA (269) 4 20 28
TOK_COMA (270) 12 66
TOK_PARENTESISIZQUIERDO (271) 16 41 44 59 60 63
TOK_PARENTESISDERECHO (272) 16 41 45 59 60 62
TOK_CORCHETEIZQUIERDO (273) 10 38
TOK_CORCHETEDERECHO (274) 10 38
TOK_LLAVEIZQUIERDA (275) 1 16 40 41 45
TOK_LLAVEDERECHA (276) 1 15 39 40 43
TOK_ASIGNACION (277) 36 37
TOK_MAS (278) 49
TOK_MENOS (279) 50 53
TOK_DIVISION (280) 51
TOK_ASTERISCO (281) 52
TOK_AND (282) 54
TOK_OR (283) 55
TOK_NOT (284) 56
TOK_IGUAL (285) 69
TOK_DISTINTO (286) 70
TOK_MENORIGUAL (287) 71
TOK_MAYORIGUAL (288) 72
TOK_MENOR (289) 73
TOK_MAYOR (290) 74
TOK_IDENTIFICADOR (291) 17 23 36 38 46 57 63 80
TOK_CONSTANTE_ENTERA (292) 10 79
TOK_TRUE (293) 77
TOK_FALSE (294) 78
TOK_ERROR (295)


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
programa (42)
    on left: 1, on right: 0
declaraciones (43)
    on left: 2 3, on right: 1 3 24
declaracion (44)
    on left: 4, on right: 2 3
clase (45)
    on left: 5 6, on right: 4
clase_escalar (46)
    on left: 7, on right: 5
tipo (47)
    on left: 8 9, on right: 7 10 17 22
clase_vector (48)
    on left: 10, on right: 6
identificadores (49)
    on left: 11 12, on right: 4 12
funciones (50)
    on left: 13 14, on right: 1 13
funcion (51)
    on left: 15, on right: 13
fn_declaration (52)
    on left: 16, on right: 15
fn_name (53)
    on left: 17, on right: 16
parametros_funcion (54)
    on left: 18 19, on right: 16
resto_parametros_funcion (55)
    on left: 20 21, on right: 18 20
parametro_funcion (56)
    on left: 22, on right: 18 20
idpf (57)
    on left: 23, on right: 22
declaraciones_funcion (58)
    on left: 24 25, on right: 16
sentencias (59)
    on left: 26 27, on right: 1 15 27 40 42 43
sentencia (60)
    on left: 28 29, on right: 26 27
sentencia_simple (61)
    on left: 30 31 32 33, on right: 28
bloque (62)
    on left: 34 35, on right: 29
asignacion (63)
    on left: 36 37, on right: 30
elemento_vector (64)
    on left: 38, on right: 37 61
condicional (65)
    on left: 39 40, on right: 34
if_exp (66)
    on left: 41, on right: 42
if_exp_sentencias (67)
    on left: 42, on right: 39 40
bucle (68)
    on left: 43, on right: 35
while (69)
    on left: 44, on right: 45
while_exp (70)
    on left: 45, on right: 43
lectura (71)
    on left: 46, on right: 31
escritura (72)
    on left: 47, on right: 32
retorno_funcion (73)
    on left: 48, on right: 33
exp (74)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62, on right: 36
    37 38 41 45 47 48 49 50 51 52 53 54 55 56 59 68 69 70 71 72 73
    74
call_func (75)
    on left: 63, on right: 62
lista_expresiones (76)
    on left: 64 65, on right: 62
resto_lista_expresiones (77)
    on left: 66 67, on right: 64 66
expf (78)
    on left: 68, on right: 64 66
comparacion (79)
    on left: 69 70 71 72 73 74, on right: 60
constante (80)
    on left: 75 76, on right: 58
constante_logica (81)
    on left: 77 78, on right: 75
constante_entera (82)
    on left: 79, on right: 76
identificador (83)
    on left: 80, on right: 11 12
tabla (84)
    on left: 81, on right: 1
main (85)
    on left: 82, on right: 1


State 0

    0 $accept: . programa $end

    TOK_MAIN  shift, and go to state 1

    programa  go to state 2


State 1

    1 programa: TOK_MAIN . TOK_LLAVEIZQUIERDA declaraciones tabla funciones main sentencias TOK_LLAVEDERECHA

    TOK_LLAVEIZQUIERDA  shift, and go to state 3


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 4


State 3

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA . declaraciones tabla funciones main sentencias TOK_LLAVEDERECHA

    TOK_INT      shift, and go to state 5
    TOK_BOOLEAN  shift, and go to state 6
    TOK_ARRAY    shift, and go to state 7

    declaraciones  go to state 8
    declaracion    go to state 9
    clase          go to state 10
    clase_escalar  go to state 11
    tipo           go to state 12
    clase_vector   go to state 13


State 4

    0 $accept: programa $end .

    $default  accept


State 5

    8 tipo: TOK_INT .

    $default  reduce using rule 8 (tipo)


State 6

    9 tipo: TOK_BOOLEAN .

    $default  reduce using rule 9 (tipo)


State 7

   10 clase_vector: TOK_ARRAY . tipo TOK_CORCHETEIZQUIERDO TOK_CONSTANTE_ENTERA TOK_CORCHETEDERECHO

    TOK_INT      shift, and go to state 5
    TOK_BOOLEAN  shift, and go to state 6

    tipo  go to state 14


State 8

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones . tabla funciones main sentencias TOK_LLAVEDERECHA

    $default  reduce using rule 81 (tabla)

    tabla  go to state 15


State 9

    2 declaraciones: declaracion .
    3              | declaracion . declaraciones

    TOK_INT      shift, and go to state 5
    TOK_BOOLEAN  shift, and go to state 6
    TOK_ARRAY    shift, and go to state 7

    $default  reduce using rule 2 (declaraciones)

    declaraciones  go to state 16
    declaracion    go to state 9
    clase          go to state 10
    clase_escalar  go to state 11
    tipo           go to state 12
    clase_vector   go to state 13


State 10

    4 declaracion: clase . identificadores TOK_PUNTOYCOMA

    TOK_IDENTIFICADOR  shift, and go to state 17

    identificadores  go to state 18
    identificador    go to state 19


State 11

    5 clase: clase_escalar .

    $default  reduce using rule 5 (clase)


State 12

    7 clase_escalar: tipo .

    $default  reduce using rule 7 (clase_escalar)


State 13

    6 clase: clase_vector .

    $default  reduce using rule 6 (clase)


State 14

   10 clase_vector: TOK_ARRAY tipo . TOK_CORCHETEIZQUIERDO TOK_CONSTANTE_ENTERA TOK_CORCHETEDERECHO

    TOK_CORCHETEIZQUIERDO  shift, and go to state 20


State 15

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones tabla . funciones main sentencias TOK_LLAVEDERECHA

    TOK_FUNCTION  shift, and go to state 21

    $default  reduce using rule 14 (funciones)

    funciones       go to state 22
    funcion         go to state 23
    fn_declaration  go to state 24
    fn_name         go to state 25


State 16

    3 declaraciones: declaracion declaraciones .

    $default  reduce using rule 3 (declaraciones)


State 17

   80 identificador: TOK_IDENTIFICADOR .

    $default  reduce using rule 80 (identificador)


State 18

    4 declaracion: clase identificadores . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  shift, and go to state 26


State 19

   11 identificadores: identificador .
   12                | identificador . TOK_COMA identificadores

    TOK_COMA  shift, and go to state 27

    $default  reduce using rule 11 (identificadores)


State 20

   10 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO . TOK_CONSTANTE_ENTERA TOK_CORCHETEDERECHO

    TOK_CONSTANTE_ENTERA  shift, and go to state 28


State 21

   17 fn_name: TOK_FUNCTION . tipo TOK_IDENTIFICADOR

    TOK_INT      shift, and go to state 5
    TOK_BOOLEAN  shift, and go to state 6

    tipo  go to state 29


State 22

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones tabla funciones . main sentencias TOK_LLAVEDERECHA

    $default  reduce using rule 82 (main)

    main  go to state 30


State 23

   13 funciones: funcion . funciones

    TOK_FUNCTION  shift, and go to state 21

    $default  reduce using rule 14 (funciones)

    funciones       go to state 31
    funcion         go to state 23
    fn_declaration  go to state 24
    fn_name         go to state 25


State 24

   15 funcion: fn_declaration . sentencias TOK_LLAVEDERECHA

    TOK_IF             shift, and go to state 32
    TOK_WHILE          shift, and go to state 33
    TOK_SCANF          shift, and go to state 34
    TOK_PRINTF         shift, and go to state 35
    TOK_RETURN         shift, and go to state 36
    TOK_IDENTIFICADOR  shift, and go to state 37

    sentencias         go to state 38
    sentencia          go to state 39
    sentencia_simple   go to state 40
    bloque             go to state 41
    asignacion         go to state 42
    elemento_vector    go to state 43
    condicional        go to state 44
    if_exp             go to state 45
    if_exp_sentencias  go to state 46
    bucle              go to state 47
    while              go to state 48
    while_exp          go to state 49
    lectura            go to state 50
    escritura          go to state 51
    retorno_funcion    go to state 52


State 25

   16 fn_declaration: fn_name . TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

    TOK_PARENTESISIZQUIERDO  shift, and go to state 53


State 26

    4 declaracion: clase identificadores TOK_PUNTOYCOMA .

    $default  reduce using rule 4 (declaracion)


State 27

   12 identificadores: identificador TOK_COMA . identificadores

    TOK_IDENTIFICADOR  shift, and go to state 17

    identificadores  go to state 54
    identificador    go to state 19


State 28

   10 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO TOK_CONSTANTE_ENTERA . TOK_CORCHETEDERECHO

    TOK_CORCHETEDERECHO  shift, and go to state 55


State 29

   17 fn_name: TOK_FUNCTION tipo . TOK_IDENTIFICADOR

    TOK_IDENTIFICADOR  shift, and go to state 56


State 30

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones tabla funciones main . sentencias TOK_LLAVEDERECHA

    TOK_IF             shift, and go to state 32
    TOK_WHILE          shift, and go to state 33
    TOK_SCANF          shift, and go to state 34
    TOK_PRINTF         shift, and go to state 35
    TOK_RETURN         shift, and go to state 36
    TOK_IDENTIFICADOR  shift, and go to state 37

    sentencias         go to state 57
    sentencia          go to state 39
    sentencia_simple   go to state 40
    bloque             go to state 41
    asignacion         go to state 42
    elemento_vector    go to state 43
    condicional        go to state 44
    if_exp             go to state 45
    if_exp_sentencias  go to state 46
    bucle              go to state 47
    while              go to state 48
    while_exp          go to state 49
    lectura            go to state 50
    escritura          go to state 51
    retorno_funcion    go to state 52


State 31

   13 funciones: funcion funciones .

    $default  reduce using rule 13 (funciones)


State 32

   41 if_exp: TOK_IF . TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA

    TOK_PARENTESISIZQUIERDO  shift, and go to state 58


State 33

   44 while: TOK_WHILE . TOK_PARENTESISIZQUIERDO

    TOK_PARENTESISIZQUIERDO  shift, and go to state 59


State 34

   46 lectura: TOK_SCANF . TOK_IDENTIFICADOR

    TOK_IDENTIFICADOR  shift, and go to state 60


State 35

   47 escritura: TOK_PRINTF . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 61
    TOK_MENOS                shift, and go to state 62
    TOK_NOT                  shift, and go to state 63
    TOK_IDENTIFICADOR        shift, and go to state 64
    TOK_CONSTANTE_ENTERA     shift, and go to state 65
    TOK_TRUE                 shift, and go to state 66
    TOK_FALSE                shift, and go to state 67

    elemento_vector   go to state 68
    exp               go to state 69
    call_func         go to state 70
    constante         go to state 71
    constante_logica  go to state 72
    constante_entera  go to state 73


State 36

   48 retorno_funcion: TOK_RETURN . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 61
    TOK_MENOS                shift, and go to state 62
    TOK_NOT                  shift, and go to state 63
    TOK_IDENTIFICADOR        shift, and go to state 64
    TOK_CONSTANTE_ENTERA     shift, and go to state 65
    TOK_TRUE                 shift, and go to state 66
    TOK_FALSE                shift, and go to state 67

    elemento_vector   go to state 68
    exp               go to state 74
    call_func         go to state 70
    constante         go to state 71
    constante_logica  go to state 72
    constante_entera  go to state 73


State 37

   36 asignacion: TOK_IDENTIFICADOR . TOK_ASIGNACION exp
   38 elemento_vector: TOK_IDENTIFICADOR . TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

    TOK_CORCHETEIZQUIERDO  shift, and go to state 75
    TOK_ASIGNACION         shift, and go to state 76


State 38

   15 funcion: fn_declaration sentencias . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  shift, and go to state 77


State 39

   26 sentencias: sentencia .
   27           | sentencia . sentencias

    TOK_IF             shift, and go to state 32
    TOK_WHILE          shift, and go to state 33
    TOK_SCANF          shift, and go to state 34
    TOK_PRINTF         shift, and go to state 35
    TOK_RETURN         shift, and go to state 36
    TOK_IDENTIFICADOR  shift, and go to state 37

    $default  reduce using rule 26 (sentencias)

    sentencias         go to state 78
    sentencia          go to state 39
    sentencia_simple   go to state 40
    bloque             go to state 41
    asignacion         go to state 42
    elemento_vector    go to state 43
    condicional        go to state 44
    if_exp             go to state 45
    if_exp_sentencias  go to state 46
    bucle              go to state 47
    while              go to state 48
    while_exp          go to state 49
    lectura            go to state 50
    escritura          go to state 51
    retorno_funcion    go to state 52


State 40

   28 sentencia: sentencia_simple . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  shift, and go to state 79


State 41

   29 sentencia: bloque .

    $default  reduce using rule 29 (sentencia)


State 42

   30 sentencia_simple: asignacion .

    $default  reduce using rule 30 (sentencia_simple)


State 43

   37 asignacion: elemento_vector . TOK_ASIGNACION exp

    TOK_ASIGNACION  shift, and go to state 80


State 44

   34 bloque: condicional .

    $default  reduce using rule 34 (bloque)


State 45

   42 if_exp_sentencias: if_exp . sentencias

    TOK_IF             shift, and go to state 32
    TOK_WHILE          shift, and go to state 33
    TOK_SCANF          shift, and go to state 34
    TOK_PRINTF         shift, and go to state 35
    TOK_RETURN         shift, and go to state 36
    TOK_IDENTIFICADOR  shift, and go to state 37

    sentencias         go to state 81
    sentencia          go to state 39
    sentencia_simple   go to state 40
    bloque             go to state 41
    asignacion         go to state 42
    elemento_vector    go to state 43
    condicional        go to state 44
    if_exp             go to state 45
    if_exp_sentencias  go to state 46
    bucle              go to state 47
    while              go to state 48
    while_exp          go to state 49
    lectura            go to state 50
    escritura          go to state 51
    retorno_funcion    go to state 52


State 46

   39 condicional: if_exp_sentencias . TOK_LLAVEDERECHA
   40            | if_exp_sentencias . TOK_LLAVEDERECHA TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  shift, and go to state 82


State 47

   35 bloque: bucle .

    $default  reduce using rule 35 (bloque)


State 48

   45 while_exp: while . exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA

    TOK_PARENTESISIZQUIERDO  shift, and go to state 61
    TOK_MENOS                shift, and go to state 62
    TOK_NOT                  shift, and go to state 63
    TOK_IDENTIFICADOR        shift, and go to state 64
    TOK_CONSTANTE_ENTERA     shift, and go to state 65
    TOK_TRUE                 shift, and go to state 66
    TOK_FALSE                shift, and go to state 67

    elemento_vector   go to state 68
    exp               go to state 83
    call_func         go to state 70
    constante         go to state 71
    constante_logica  go to state 72
    constante_entera  go to state 73


State 49

   43 bucle: while_exp . sentencias TOK_LLAVEDERECHA

    TOK_IF             shift, and go to state 32
    TOK_WHILE          shift, and go to state 33
    TOK_SCANF          shift, and go to state 34
    TOK_PRINTF         shift, and go to state 35
    TOK_RETURN         shift, and go to state 36
    TOK_IDENTIFICADOR  shift, and go to state 37

    sentencias         go to state 84
    sentencia          go to state 39
    sentencia_simple   go to state 40
    bloque             go to state 41
    asignacion         go to state 42
    elemento_vector    go to state 43
    condicional        go to state 44
    if_exp             go to state 45
    if_exp_sentencias  go to state 46
    bucle              go to state 47
    while              go to state 48
    while_exp          go to state 49
    lectura            go to state 50
    escritura          go to state 51
    retorno_funcion    go to state 52


State 50

   31 sentencia_simple: lectura .

    $default  reduce using rule 31 (sentencia_simple)


State 51

   32 sentencia_simple: escritura .

    $default  reduce using rule 32 (sentencia_simple)


State 52

   33 sentencia_simple: retorno_funcion .

    $default  reduce using rule 33 (sentencia_simple)


State 53

   16 fn_declaration: fn_name TOK_PARENTESISIZQUIERDO . parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

    TOK_INT      shift, and go to state 5
    TOK_BOOLEAN  shift, and go to state 6

    $default  reduce using rule 19 (parametros_funcion)

    tipo                go to state 85
    parametros_funcion  go to state 86
    parametro_funcion   go to state 87


State 54

   12 identificadores: identificador TOK_COMA identificadores .

    $default  reduce using rule 12 (identificadores)


State 55

   10 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO TOK_CONSTANTE_ENTERA TOK_CORCHETEDERECHO .

    $default  reduce using rule 10 (clase_vector)


State 56

   17 fn_name: TOK_FUNCTION tipo TOK_IDENTIFICADOR .

    $default  reduce using rule 17 (fn_name)


State 57

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones tabla funciones main sentencias . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  shift, and go to state 88


State 58

   41 if_exp: TOK_IF TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA

    TOK_PARENTESISIZQUIERDO  shift, and go to state 61
    TOK_MENOS                shift, and go to state 62
    TOK_NOT                  shift, and go to state 63
    TOK_IDENTIFICADOR        shift, and go to state 64
    TOK_CONSTANTE_ENTERA     shift, and go to state 65
    TOK_TRUE                 shift, and go to state 66
    TOK_FALSE                shift, and go to state 67

    elemento_vector   go to state 68
    exp               go to state 89
    call_func         go to state 70
    constante         go to state 71
    constante_logica  go to state 72
    constante_entera  go to state 73


State 59

   44 while: TOK_WHILE TOK_PARENTESISIZQUIERDO .

    $default  reduce using rule 44 (while)


State 60

   46 lectura: TOK_SCANF TOK_IDENTIFICADOR .

    $default  reduce using rule 46 (lectura)


State 61

   59 exp: TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO
   60    | TOK_PARENTESISIZQUIERDO . comparacion TOK_PARENTESISDERECHO

    TOK_PARENTESISIZQUIERDO  shift, and go to state 61
    TOK_MENOS                shift, and go to state 62
    TOK_NOT                  shift, and go to state 63
    TOK_IDENTIFICADOR        shift, and go to state 64
    TOK_CONSTANTE_ENTERA     shift, and go to state 65
    TOK_TRUE                 shift, and go to state 66
    TOK_FALSE                shift, and go to state 67

    elemento_vector   go to state 68
    exp               go to state 90
    call_func         go to state 70
    comparacion       go to state 91
    constante         go to state 71
    constante_logica  go to state 72
    constante_entera  go to state 73


State 62

   53 exp: TOK_MENOS . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 61
    TOK_MENOS                shift, and go to state 62
    TOK_NOT                  shift, and go to state 63
    TOK_IDENTIFICADOR        shift, and go to state 64
    TOK_CONSTANTE_ENTERA     shift, and go to state 65
    TOK_TRUE                 shift, and go to state 66
    TOK_FALSE                shift, and go to state 67

    elemento_vector   go to state 68
    exp               go to state 92
    call_func         go to state 70
    constante         go to state 71
    constante_logica  go to state 72
    constante_entera  go to state 73


State 63

   56 exp: TOK_NOT . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 61
    TOK_MENOS                shift, and go to state 62
    TOK_NOT                  shift, and go to state 63
    TOK_IDENTIFICADOR        shift, and go to state 64
    TOK_CONSTANTE_ENTERA     shift, and go to state 65
    TOK_TRUE                 shift, and go to state 66
    TOK_FALSE                shift, and go to state 67

    elemento_vector   go to state 68
    exp               go to state 93
    call_func         go to state 70
    constante         go to state 71
    constante_logica  go to state 72
    constante_entera  go to state 73


State 64

   38 elemento_vector: TOK_IDENTIFICADOR . TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO
   57 exp: TOK_IDENTIFICADOR .
   63 call_func: TOK_IDENTIFICADOR . TOK_PARENTESISIZQUIERDO

    TOK_PARENTESISIZQUIERDO  shift, and go to state 94
    TOK_CORCHETEIZQUIERDO    shift, and go to state 75

    $default  reduce using rule 57 (exp)


State 65

   79 constante_entera: TOK_CONSTANTE_ENTERA .

    $default  reduce using rule 79 (constante_entera)


State 66

   77 constante_logica: TOK_TRUE .

    $default  reduce using rule 77 (constante_logica)


State 67

   78 constante_logica: TOK_FALSE .

    $default  reduce using rule 78 (constante_logica)


State 68

   61 exp: elemento_vector .

    $default  reduce using rule 61 (exp)


State 69

   47 escritura: TOK_PRINTF exp .
   49 exp: exp . TOK_MAS exp
   50    | exp . TOK_MENOS exp
   51    | exp . TOK_DIVISION exp
   52    | exp . TOK_ASTERISCO exp
   54    | exp . TOK_AND exp
   55    | exp . TOK_OR exp

    TOK_MAS        shift, and go to state 95
    TOK_MENOS      shift, and go to state 96
    TOK_DIVISION   shift, and go to state 97
    TOK_ASTERISCO  shift, and go to state 98
    TOK_AND        shift, and go to state 99
    TOK_OR         shift, and go to state 100

    $default  reduce using rule 47 (escritura)


State 70

   62 exp: call_func . lista_expresiones TOK_PARENTESISDERECHO

    TOK_PARENTESISIZQUIERDO  shift, and go to state 61
    TOK_MENOS                shift, and go to state 62
    TOK_NOT                  shift, and go to state 63
    TOK_IDENTIFICADOR        shift, and go to state 64
    TOK_CONSTANTE_ENTERA     shift, and go to state 65
    TOK_TRUE                 shift, and go to state 66
    TOK_FALSE                shift, and go to state 67

    $default  reduce using rule 65 (lista_expresiones)

    elemento_vector    go to state 68
    exp                go to state 101
    call_func          go to state 70
    lista_expresiones  go to state 102
    expf               go to state 103
    constante          go to state 71
    constante_logica   go to state 72
    constante_entera   go to state 73


State 71

   58 exp: constante .

    $default  reduce using rule 58 (exp)


State 72

   75 constante: constante_logica .

    $default  reduce using rule 75 (constante)


State 73

   76 constante: constante_entera .

    $default  reduce using rule 76 (constante)


State 74

   48 retorno_funcion: TOK_RETURN exp .
   49 exp: exp . TOK_MAS exp
   50    | exp . TOK_MENOS exp
   51    | exp . TOK_DIVISION exp
   52    | exp . TOK_ASTERISCO exp
   54    | exp . TOK_AND exp
   55    | exp . TOK_OR exp

    TOK_MAS        shift, and go to state 95
    TOK_MENOS      shift, and go to state 96
    TOK_DIVISION   shift, and go to state 97
    TOK_ASTERISCO  shift, and go to state 98
    TOK_AND        shift, and go to state 99
    TOK_OR         shift, and go to state 100

    $default  reduce using rule 48 (retorno_funcion)


State 75

   38 elemento_vector: TOK_IDENTIFICADOR TOK_CORCHETEIZQUIERDO . exp TOK_CORCHETEDERECHO

    TOK_PARENTESISIZQUIERDO  shift, and go to state 61
    TOK_MENOS                shift, and go to state 62
    TOK_NOT                  shift, and go to state 63
    TOK_IDENTIFICADOR        shift, and go to state 64
    TOK_CONSTANTE_ENTERA     shift, and go to state 65
    TOK_TRUE                 shift, and go to state 66
    TOK_FALSE                shift, and go to state 67

    elemento_vector   go to state 68
    exp               go to state 104
    call_func         go to state 70
    constante         go to state 71
    constante_logica  go to state 72
    constante_entera  go to state 73


State 76

   36 asignacion: TOK_IDENTIFICADOR TOK_ASIGNACION . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 61
    TOK_MENOS                shift, and go to state 62
    TOK_NOT                  shift, and go to state 63
    TOK_IDENTIFICADOR        shift, and go to state 64
    TOK_CONSTANTE_ENTERA     shift, and go to state 65
    TOK_TRUE                 shift, and go to state 66
    TOK_FALSE                shift, and go to state 67

    elemento_vector   go to state 68
    exp               go to state 105
    call_func         go to state 70
    constante         go to state 71
    constante_logica  go to state 72
    constante_entera  go to state 73


State 77

   15 funcion: fn_declaration sentencias TOK_LLAVEDERECHA .

    $default  reduce using rule 15 (funcion)


State 78

   27 sentencias: sentencia sentencias .

    $default  reduce using rule 27 (sentencias)


State 79

   28 sentencia: sentencia_simple TOK_PUNTOYCOMA .

    $default  reduce using rule 28 (sentencia)


State 80

   37 asignacion: elemento_vector TOK_ASIGNACION . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 61
    TOK_MENOS                shift, and go to state 62
    TOK_NOT                  shift, and go to state 63
    TOK_IDENTIFICADOR        shift, and go to state 64
    TOK_CONSTANTE_ENTERA     shift, and go to state 65
    TOK_TRUE                 shift, and go to state 66
    TOK_FALSE                shift, and go to state 67

    elemento_vector   go to state 68
    exp               go to state 106
    call_func         go to state 70
    constante         go to state 71
    constante_logica  go to state 72
    constante_entera  go to state 73


State 81

   42 if_exp_sentencias: if_exp sentencias .

    $default  reduce using rule 42 (if_exp_sentencias)


State 82

   39 condicional: if_exp_sentencias TOK_LLAVEDERECHA .
   40            | if_exp_sentencias TOK_LLAVEDERECHA . TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_ELSE  shift, and go to state 107

    $default  reduce using rule 39 (condicional)


State 83

   45 while_exp: while exp . TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA
   49 exp: exp . TOK_MAS exp
   50    | exp . TOK_MENOS exp
   51    | exp . TOK_DIVISION exp
   52    | exp . TOK_ASTERISCO exp
   54    | exp . TOK_AND exp
   55    | exp . TOK_OR exp

    TOK_PARENTESISDERECHO  shift, and go to state 108
    TOK_MAS                shift, and go to state 95
    TOK_MENOS              shift, and go to state 96
    TOK_DIVISION           shift, and go to state 97
    TOK_ASTERISCO          shift, and go to state 98
    TOK_AND                shift, and go to state 99
    TOK_OR                 shift, and go to state 100


State 84

   43 bucle: while_exp sentencias . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  shift, and go to state 109


State 85

   22 parametro_funcion: tipo . idpf

    TOK_IDENTIFICADOR  shift, and go to state 110

    idpf  go to state 111


State 86

   16 fn_declaration: fn_name TOK_PARENTESISIZQUIERDO parametros_funcion . TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

    TOK_PARENTESISDERECHO  shift, and go to state 112


State 87

   18 parametros_funcion: parametro_funcion . resto_parametros_funcion

    TOK_PUNTOYCOMA  shift, and go to state 113

    $default  reduce using rule 21 (resto_parametros_funcion)

    resto_parametros_funcion  go to state 114


State 88

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones tabla funciones main sentencias TOK_LLAVEDERECHA .
